# ene0082-trabalhos

./: .gitignore  README.md  main.ipynb  notebook.ipynb  pyproject.toml  solution.ipynb  test.ipynb
trabalho-1/: Trabalho.ipynb  project_structure.yaml  test.py
trabalho-2/: pyproject.toml
