[project]
name = "regressao-linear-na-qualidade-de-vinho"
version = "0.1.0"
description = "Gerar um score de vinhos a partir das suas caracteristicas quimicas. Usando regressão linear."
authors = [
    {name = "Datura",email = "daturasoldev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "matplot (>=0.1.9,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
